          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h: Improved
          const-correctness of Viewer::setViewpoint.

        * src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.h,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/bvolume.h: Removed BVolume::dump and
          VrmlFrustum::dump.

2002-09-29  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/common.h,
          src/openvrml/OpenVRML/private.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/private.h: Moved utility functions
          from OpenVRML::Viewer to OpenVRML::GL::ViewerOpenGL.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Corrected minor
          error in computeView.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/private.h: Corrected correction to
          minor error in computeView.

2002-09-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/VrmlRenderContext.cpp,
          src/openvrml/OpenVRML/VrmlRenderContext.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/bvolume.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h: Made intersection
          enumeration in BVolume a named type.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Removed
          workaround for old bug in Mesa.

2002-09-27  S. K. Bose  <bose@pavan.barc.ernet.in>

        * ide-projects/Windows/VisualC6/winconfig.h: In MSVC project